social media added

--- a/gallery.html
+++ b/gallery.html
@@ -382,29 +382,30 @@
                         <h4 class="title">Follow us</h4>
                         <ul class="footer-social">
                             <li>
-                                <a href="#0">
+                                <a href="https://www.facebook.com/p/Asian-Karate-Club-Abudhabi-100054573094297/" target="_blank">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-facebook-f"></i>
                                     </div>
                                     Facebook
                                 </a>
                             </li>
-                            <li><a href="#0">
+                            <li><a
+                                    href="https://www.instagram.com/asian_karate_club_abhudabi_/?igshid=MmIzYWVlNDQ5Yg%3D%3D" target="_blank">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-instagram"></i>
                                     </div>
                                     Instagram
                                 </a></li>
-                            <li>
+                            <!-- <li>
                                 <a href="#0">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-twitter"></i>
                                     </div>
                                     Twitter
                                 </a>
-                            </li>
+                            </li> -->
                             <li>
-                                <a href="#0">
+                                <a href="https://wa.me/+9710508928567" target="_blank">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-whatsapp"></i>
                                     </div>
