--- a/about.html
+++ b/about.html
@@ -735,7 +735,8 @@ Start Footer
             <div class="row justify-content-center">
                 <div class="col-xl-12 text-center">
                     <div class="copyright-area">
-                        <p>Copyright 2022 AKC. made with 💗</p>
+                        <p>Copyright 2022 AKC. made by <a target="_blank" href="https://ddotsmedia.com">DDots Media</a>
+                        </p>
                     </div>
                 </div>
             </div>
