--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,15 @@
 <body>
 
 
-
+    <div class="popup" id="success-popup">
+        <div class="popup-content">
+            <!-- <div class="popup-icon">
+                <img src="success-icon.png" alt="Success Tick">
+            </div> -->
+            <p>Form submitted successfully. We will contact you soon.</p>
+            <button id="close-popup">Close</button>
+        </div>
+    </div>
 
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -450,22 +458,24 @@
                         <div class="contact-social-area">
                             <span>FOLLOW US -</span>
                             <ul class="contact-social">
-                                <li><a target="_blank" href="https://www.facebook.com/p/Asian-Karate-Club-Abudhabi-100054573094297/"><i
+                                <li><a target="_blank"
+                                        href="https://www.facebook.com/p/Asian-Karate-Club-Abudhabi-100054573094297/"><i
                                             class="fab fa-facebook-f"></i></a></li>
                                 <!-- <li><a href="#0"><i class="fab fa-twitter"></i></a></li> -->
                                 <!-- <li><a href="#0"><i class="fab fa-google-plus-g"></i></a></li> -->
                                 <li><a target="_blank"
                                         href="https://www.instagram.com/asian_karate_club_abhudabi_/?igshid=MmIzYWVlNDQ5Yg%3D%3D"><i
                                             class="fab fa-instagram"></i></a></li>
-                                <li><a target="_blank" href="https://wa.me/+9710508928567"><i class="fab fa-whatsapp"></i></a></li>
+                                <li><a target="_blank" href="https://wa.me/+9710508928567"><i
+                                            class="fab fa-whatsapp"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 mb-60">
                     <div class="account-widget-form-area">
-                        <form class="account-widget-form" method="POST"
-                            action="https://script.google.com/macros/s/AKfycbzrxgr71UQ6Jx5pTFQBmJML28xFdEqGG0lc4PX7Np9Rf010czJM0v9WCb3xVVkFKF4gEA/exec">
+                        <form class="account-widget-form" id="contact-form"
+                            action="https://script.google.com/macros/s/AKfycbwJCoU5enQ5OURRisRX6oVtVm5pvJr8xovRFdGRkX5RTEyygihUugJTrLGJotZ-xGGyWQ/exec">
                             <div class="row justify-content-center mb-25-none">
                                 <div class="col-xl-12 form-group">
                                     <input name="name" type="text" class="form--control" placeholder="Your Name*">
@@ -554,15 +564,16 @@
                         <h4 class="title">Follow us</h4>
                         <ul class="footer-social">
                             <li>
-                                <a href="https://www.facebook.com/p/Asian-Karate-Club-Abudhabi-100054573094297/" target="_blank">
+                                <a href="https://www.facebook.com/p/Asian-Karate-Club-Abudhabi-100054573094297/"
+                                    target="_blank">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-facebook-f"></i>
                                     </div>
                                     Facebook
                                 </a>
                             </li>
-                            <li><a
-                                    href="https://www.instagram.com/asian_karate_club_abhudabi_/?igshid=MmIzYWVlNDQ5Yg%3D%3D" target="_blank">
+                            <li><a href="https://www.instagram.com/asian_karate_club_abhudabi_/?igshid=MmIzYWVlNDQ5Yg%3D%3D"
+                                    target="_blank">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-instagram"></i>
                                     </div>
@@ -593,7 +604,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-12 text-center">
                     <div class="copyright-area">
-                        <p>Copyright 2022 AKC. made with 💗</p>
+                        <p>Copyright 2022 AKC. made by <a target="_blank" href="https://ddotsmedia.com">DDots Media</a>
+                        </p>
                     </div>
                 </div>
             </div>
