--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 
 <body>
 
+
+    <div class="popup" id="success-popup">
+        <div class="popup-content">
+            <!-- <div class="popup-icon">
+                <img src="success-icon.png" alt="Success Tick">
+            </div> -->
+            <p>Form submitted successfully. We will contact you soon.</p>
+            <button id="close-popup">Close</button>
+        </div>
+    </div>
+
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Start Header
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -790,9 +801,7 @@
                                 <li><a
                                         href="https://www.instagram.com/asian_karate_club_abhudabi_/?igshid=MmIzYWVlNDQ5Yg%3D%3D"><i
                                             class="fab fa-instagram"></i></a></li>
-                                <li><a
-                                        href="https://wa.me/+9710508928567"><i
-                                            class="fab fa-whatsapp"></i></a></li>
+                                <li><a href="https://wa.me/+9710508928567"><i class="fab fa-whatsapp"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -800,7 +809,7 @@
                 <div class="col-xl-6 col-lg-6 mb-60">
                     <div class="account-widget-form-area">
                         <form class="account-widget-form" id="contact-form"
-                            action="https://script.google.com/macros/s/AKfycbxxWvjMG_C6vT7ix8ACMJRBaLD8AGjLxZFjcZy08d1CsDwCi15zLD5L-yJmzuwx0vM5lw/exec">
+                            action="https://script.google.com/macros/s/AKfycbwJCoU5enQ5OURRisRX6oVtVm5pvJr8xovRFdGRkX5RTEyygihUugJTrLGJotZ-xGGyWQ/exec">
                             <div class="row justify-content-center mb-25-none">
                                 <div class="col-xl-12 form-group">
                                     <input name="name" type="text" class="form--control" placeholder="Your Name*">
@@ -886,15 +895,16 @@ End Account widget
                         <h4 class="title">Follow us</h4>
                         <ul class="footer-social">
                             <li>
-                                <a href="https://www.facebook.com/p/Asian-Karate-Club-Abudhabi-100054573094297/" target="_blank">
+                                <a href="https://www.facebook.com/p/Asian-Karate-Club-Abudhabi-100054573094297/"
+                                    target="_blank">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-facebook-f"></i>
                                     </div>
                                     Facebook
                                 </a>
                             </li>
-                            <li><a
-                                    href="https://www.instagram.com/asian_karate_club_abhudabi_/?igshid=MmIzYWVlNDQ5Yg%3D%3D" target="_blank">
+                            <li><a href="https://www.instagram.com/asian_karate_club_abhudabi_/?igshid=MmIzYWVlNDQ5Yg%3D%3D"
+                                    target="_blank">
                                     <div class="footer_li-icon">
                                         <i class="fab fa-instagram"></i>
                                     </div>
@@ -925,7 +935,8 @@ End Account widget
             <div class="row justify-content-center">
                 <div class="col-xl-12 text-center">
                     <div class="copyright-area">
-                        <p>Copyright 2022 AKC. made with 💗</p>
+                        <p>Copyright 2022 AKC. made by <a target="_blank" href="https://ddotsmedia.com">DDots Media</a>
+                        </p>
                     </div>
                 </div>
             </div>
